--- a/algo/cdcl_cosy.tex
+++ b/algo/cdcl_cosy.tex
@@ -44,7 +44,7 @@
 					}
 				}
 			$\varphi \gets \varphi \cup \{\omega$\} \;
-				$dl \gets$ \backjumpPolicy{}\;
+				$(dl, \alpha) \gets$ \backjumpPolicy{}\;
 				{\color{red}\C.\notifyCancelled{$\alpha$}\;} \label{algo:cdcl_sym:cancel}
 			}
 			\Else{
