--- a/algo/cdcl_sym_sp.tex
+++ b/algo/cdcl_sym_sp.tex
@@ -60,7 +60,7 @@
 				}\label{algo:end_stab}		
 				
 				
-				$dl \gets$ \backjumpPolicy{}\;
+				$(dl,\alpha) \gets$ \backjumpPolicy{}\;
 				$\varphi \gets \varphi \cup \{\omega$\} \;
 				
 				\colorsym{\C.\notifyCancelled{$\alpha$}}\;
