--- a/main.bib
+++ b/main.bib
@@ -630,3 +630,9 @@
 	year={2008},
 	publisher={Citeseer}
 }
+
+@inproceedings{le2008sat,
+	title={On SAT technologies for dependency management and beyond},
+	author={Le Berre, Daniel and Parrain, Anne},
+	year={2008}
+}
