--- a/conclusion.tex
+++ b/conclusion.tex
@@ -95,14 +95,14 @@ a verification tools like Alloy\footnote{\url{http://alloytools.org/}} use a SAT
 counter-example for software modeling. In the second example, an integration of our symmetry based SAT solver may improve the performance of the verification.
 
 
-On some big instances, the computation of symmetries can be a limiting factor. An ideal approach is to find 
-symmetries during the computation will be ideal. Moreover, some instances can have partial symmetries that cannot be 
+Finally, on some big instances, the computation of symmetries can be the limiting factor. An ideal approach is to find 
+symmetries during the computation will be ideal. %This method will be very difficult 
+Moreover, some instances can have partial symmetries that cannot be 
 found with classical symmetry detection algorithm. Suppose that, the produces graph is symmetric only if we ignore some 
 edges. To deal with partial symmetries the use of the notion of local symmetries can be the starting point.
 
 
-Finally, a lot of research is based on parallel SAT solving, due to the recent multi-core architecture. 
-
+ 
 %% Local Variables:
 %% TeX-master: "main.tex"
 %% ispell-dictionary: "en_US"
