--- a/conclusion.tex
+++ b/conclusion.tex
@@ -94,7 +94,7 @@ the IDE Eclipse use a SAT solver to check dependencies on installed packages \ci
 a verification tools like Alloy\footnote{\url{http://alloytools.org/}} use a SAT solver to check properties and find
 counter-example for software modeling. In the second example, an integration of our symmetry based SAT solver may improve the performance of the verification.
 
-
+\hakan{retravailler + example}
 Finally, on some big instances, the computation of symmetries can be the limiting factor. An ideal approach is to find 
 symmetries during the computation will be ideal. %This method will be very difficult 
 Moreover, some instances can have partial symmetries that cannot be 
